versioned_docs/version-2025.2.1/professor/darlan_roque_dapieve.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Darlan Roque Dapieve",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Segurança do Trabalho - 197",
          "size": 1,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "sala_11-2",
          "students": [
            "EIN2023"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
        ,
        {
          "subject": "Segurança do Trabalho - 345",
          "size": 2,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "sala_13-2",
          "students": [
            "ELM2024"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
        
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        
        {
          "subject": "Manutenção Industrial - 351",
          "size": 2,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "sala_13-2",
          "students": [
            "ELM2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
        ,
        
        {
          "subject": "Elementos de Máquinas - 349",
          "size": 2,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "sala_13-2",
          "students": [
            "ELM2024"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Cálculo Mecânico - 154",
          "size": 2,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
        ,
        {
          "subject": "Segurança do trabalho - 2388",
          "size": 2,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "sala_15-2",
          "students": [
            "TAL2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
        ,
        {
          "subject": "Segurança do Trabalho - 693",
          "size": 2,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "sala_12-2",
          "students": [
            "ELE2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Circuitos Hidráulicos e Pneumáticos - 347",
          "size": 4,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "laboratorio_de_materiais_e_hidraulica_b4",
          "students": [
            "ELM2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Darlan Roque Dapieve

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
